fix datepicker font-size on small screens

--- a/src/styles/components/_deadline.scss
+++ b/src/styles/components/_deadline.scss
@@ -5,8 +5,9 @@
   color: #777;
   outline: none;
   white-space: initial;
+  font-size: 1.2rem;
 
-  @include respond(mobile) {
+  @include respond(laptop) {
     font-size: 1rem;
   }
 }
